@@ -1,3 +1,9 @@
+2008-10-13  Jerry DeLisle  <jvdelisle@gcc.gnu.org
+
+	PR libfortran/37083
+	* gfortran.dg/list_read_9.f90: New test.
+	* gfortran.dg/arrayio_8.f90: Fix some typos.
+
 2008-10-13  Kai Tietz  <kai.tietz@onevision.com>
 
 	* testsuite/gcc.dg/format/ms-format1.c: New.
